# ITC2016

./: .gitignore  Actor.cpp  Actor.hpp  CMakeLists.txt  ITC2016.sln  ITC2016.vcxproj  ITC2016.vcxproj.filters  Model.cpp  Model.hpp  README.md  Resource.h  Shader.cpp  Shader.hpp  StaticMesh.cpp  StaticMesh.hpp  main.cpp  types3d.cpp  types3d.hpp  util.cpp  util.hpp  vertex3d.cpp  vertex3d.hpp
SFML/VS2015/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
